k8s/clothing-size-identification.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unet-mask
spec:
  selector:
    matchLabels:
      run: unet-mask
  replicas: 1
  template:
    metadata:
      labels:
        run: unet-mask
    spec:
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
        - name: shared
          hostPath:
            path: /mnt/kubernetes/data/unet-mask
            type: Directory
        - name: data
          hostPath:
            path: /root/datasets
            type: Directory
        - name: models
          hostPath:
            path: /mnt/ML
            type: Directory
      containers:
      - name: unet-mask
        image: containers.endev.lt/unet-mask:latest
        volumeMounts:
        - name: dshm
          mountPath: /dev/shm
        - name: models
          mountPath: /ML
        - name: data
          mountPath: /data/datasets
        - name: shared
          mountPath: /data
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "32"
            memory: 32gb
            nvidia.com/gpu: "1"
        command: ["/bin/sh"]
        args:
            - -c
            - >-
                jupyter notebook --no-browser --ip=0.0.0.0 --port=80 --allow-root --NotebookApp.token= --notebook-dir='/data'
      imagePullSecrets:
        - name: containers.endev.lt.regcred
      nodeSelector:
        mlWork: gpu1
---
apiVersion: v1
kind: Service
metadata:
  name: unet-mask
  labels:
    run: unet-mask
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
    nodePort: 30933
  selector:
    run: unet-mask
---
apiVersion: v1
kind: Service
metadata:
  name: unet-mask-app
  labels:
    run: unet-mask-app
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
    targetPort: 80
  selector:
    run: unet-mask-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unet-mask-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: unet-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - to access Unet based container jupyter notebook'
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - unet.endev.lt
    secretName: unet-mask-app-tls
  rules:
  - host: "unet.endev.lt"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: unet-mask
            port:
              number: 80
